Checkbox align issue

--- a/src/styles/base/_default.scss
+++ b/src/styles/base/_default.scss
@@ -64,9 +64,9 @@ label {
 }
 
 .custom-checkbox-container {
-  display: grid;
-  grid-template-columns: 25px auto;
-  align-items: center;
+  // display: grid;
+  // grid-template-columns: 25px auto;
+  // align-items: center;
 
   input {
     width: 25px;
@@ -94,8 +94,13 @@ label {
 
   label {
     font-size: 1.1rem;
-    margin-left: 10px;
     cursor: pointer;
     line-height: 1;
+    span {
+      margin-left: 10px;
+      vertical-align: top;
+      display: inline-block;
+      padding-top: 4px;
+    }
   }
 }
